# bison-code

./: CreateTopics.bat  CreateTopics.sh  README  README.md  client.py
Kafka-Stand-Alone/: CreateTopics.bat  CreateTopics.sh  README.md  linux-readme.md
KafkaEventSorter/: CreateTopics.bat  CreateTopics.sh  pom.xml
Redis-Stand-Alone/: CMakeLists.txt  README.md  config.json  iocp.cpp  iocp.h  link_pool.cpp  link_pool.h  list_manage.h  pre_define.h  redis_connector.cpp  redis_connector.h
Redis-Stand-Alone/client/: CMakeLists.txt  config.json  iocp_client.cpp  iocp_client.h  pre_define.h
Redis-Stand-Alone/hiredis/: hiredis.h  hiredis_ssl.h  hiredisd.lib
Trill-Kafka-Integrated/: .gitignore  README.md
Trill-Kafka-Integrated/KafkaEventSorter/: pom.xml
Trill-Kafka-Integrated/TrillXPF/: TrillXPF.sln
Trill-Kafka-Integrated/TrillXPF/TrillXPF/: DataClass.cs  EventRecord.avsc  ThreadedListener.cs  TrillBI.cs  TrillXPF.cs  TrillXPF.csproj
Trill-Kafka-Integrated/TrillXPF/TrillXPF/Properties/: launchSettings.json
Trill-Stand-Alone/: .gitignore  README.md  client.py
Trill-Stand-Alone/TrillBI/: .gitignore  TrillBI.sln
Trill-Stand-Alone/TrillBI/TrillBI/: App.config  DataClass.cs  Demo.cs  ThreadedListener.cs  TrillBI.cs  TrillBI.csproj  packages.config
TrillBI/: TrillBI.sln
TrillBI/TrillBI/: App.config  Demo.cs  HelloWorld.cs  Program.cs  SocketObservableCreator.cs  Testing.cs  ThreadedIngress.cs  ThreadedListener.cs  TrillBI.cs  TrillBI.csproj  packages.config
TrillBI/TrillBI/Properties/: AssemblyInfo.cs
(+14 files in other folders)
