
IF(WIN32)
    ADD_COMPILE_DEFINITIONS(_CRT_SECURE_NO_WARNINGS WIN32_LEAN_AND_MEAN)
    ADD_COMPILE_DEFINITIONS(_WINSOCK_DEPRECATED_NO_WARNINGS)
ENDIF()

IF(MSVC)
    ADD_COMPILE_OPTIONS(/W0 /WX)
ELSE()
    ADD_COMPILE_OPTIONS(-Wall -Wextra -pedantic -Werror)
ENDIF()

set(ENABLE_TEST ON)

IF(ENABLE_TEST)
  ADD_SUBDIRECTORY(client)
ENDIF(ENABLE_TEST)

ADD_EXECUTABLE(server "iocp.cpp" "redis_connector.cpp" "link_pool.cpp")
TARGET_LINK_LIBRARIES(server hiredisd)
